# polynomial

./: .editorconfig  .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  Changelog.md  LICENSE  LICENSE.txt  README.md  ReleaseChecklist.md  appveyor.yml  circle.yml  codecov.yml  h  prerelease.txt
libdevcore/: ABI.h  Algorithms.h  AnsiColorized.h  Assertions.h  CMakeLists.txt  Common.h  CommonData.cpp  CommonData.h  CommonIO.cpp  CommonIO.h  Exceptions.cpp  Exceptions.h  FixedHash.h  Hash.cpp  Hash.h  IndentedWriter.cpp  IndentedWriter.h  IpfsHash.cpp  IpfsHash.h  JSON.cpp  JSON.h  Keccak256.cpp  Keccak256.h  Result.h  SHA3.cpp  SHA3.h  StringUtils.cpp  StringUtils.h  SwarmHash.cpp  SwarmHash.h  UTF8.cpp  UTF8.h  UndefMacros.h  Visitor.h  Whiskers.cpp  Whiskers.h  boost_multiprecision_number_compare_bug_workaround.hpp  debugbreak.h  picosha2.h
liblangutil/: CMakeLists.txt  CharStream.cpp  CharStream.h  Common.h  ErrorReporter.cpp  ErrorReporter.h  Exceptions.cpp  Exceptions.h  ParserBase.cpp  ParserBase.h  SVMVersion.cpp  SVMVersion.h  Scanner.cpp  Scanner.h  SemVerHandler.cpp  SemVerHandler.h  SourceLocation.h  SourceReferenceExtractor.cpp  SourceReferenceExtractor.h  SourceReferenceFormatter.cpp  SourceReferenceFormatter.h  SourceReferenceFormatterHuman.cpp  SourceReferenceFormatterHuman.h  Token.cpp  Token.h
libpolc/: CMakeLists.txt  libpolc.cpp  libpolc.h
libpolynomial/: AST.cpp  AST.h  ASTAnnotations.cpp  ASTAnnotations.h  ASTForward.h  ASTJsonConverter.cpp  ASTJsonConverter.h  ASTPrinter.cpp  ASTPrinter.h  ASTUtils.cpp  ASTUtils.h  ASTVisitor.h  AST_accept.h  ArrayUtils.cpp  ArrayUtils.h  CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  CompilerStack.cpp  CompilerStack.h  CompilerUtils.cpp  CompilerUtils.h  ConstantEvaluator.cpp  ConstantEvaluator.h  DeclarationContainer.cpp  DeclarationContainer.h  Exceptions.cpp  Exceptions.h  ExpressionCompiler.cpp  ExpressionCompiler.h  GasEstimator.cpp  GasEstimator.h  GlobalContext.cpp  GlobalContext.h  InterfaceHandler.cpp  InterfaceHandler.h  LValue.cpp  LValue.h  (+20 more)
libpolynomial/analysis/: ConstantEvaluator.cpp  ConstantEvaluator.h  ContractLevelChecker.cpp  ContractLevelChecker.h  ControlFlowAnalyzer.cpp  ControlFlowAnalyzer.h  ControlFlowBuilder.cpp  ControlFlowBuilder.h  ControlFlowGraph.cpp  ControlFlowGraph.h  DeclarationContainer.cpp  DeclarationContainer.h  DocStringAnalyser.cpp  DocStringAnalyser.h  GlobalContext.cpp  GlobalContext.h  NameAndTypeResolver.cpp  NameAndTypeResolver.h  PostTypeChecker.cpp  PostTypeChecker.h  ReferencesResolver.cpp  ReferencesResolver.h  SemVerHandler.cpp  SemVerHandler.h  StaticAnalyzer.cpp  StaticAnalyzer.h  SyntaxChecker.cpp  SyntaxChecker.h  TypeChecker.cpp  TypeChecker.h  ViewPureChecker.cpp  ViewPureChecker.h
libpolynomial/ast/: AST.cpp  AST.h  ASTAnnotations.cpp  ASTAnnotations.h  ASTEnums.h  ASTForward.h  ASTJsonConverter.cpp  ASTJsonConverter.h  ASTPrinter.cpp  ASTPrinter.h  ASTUtils.cpp  ASTUtils.h  ASTVisitor.h  AST_accept.h  ExperimentalFeatures.h  TypeProvider.cpp  TypeProvider.h  Types.cpp  Types.h
libpolynomial/codegen/: ABIFunctions.cpp  ABIFunctions.h  ArrayUtils.cpp  ArrayUtils.h  AsmCodeGen.cpp  AsmCodeGen.h  Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  CompilerUtils.cpp  CompilerUtils.h  ContractCompiler.cpp  ContractCompiler.h  ExpressionCompiler.cpp  ExpressionCompiler.h  LValue.cpp  LValue.h  MultiUseYulFunctionCollector.cpp  MultiUseYulFunctionCollector.h  YulUtilFunctions.cpp  YulUtilFunctions.h
libpolynomial/formal/: CVC4Interface.cpp  CVC4Interface.h  EncodingContext.cpp  EncodingContext.h  SMTChecker.cpp  SMTChecker.h  SMTLib2Interface.cpp  SMTLib2Interface.h  SMTPortfolio.cpp  SMTPortfolio.h  SSAVariable.cpp  SSAVariable.h  SolverInterface.h  SymbolicBoolVariable.cpp  SymbolicBoolVariable.h  SymbolicIntVariable.cpp  SymbolicIntVariable.h  SymbolicTypes.cpp  SymbolicTypes.h  SymbolicVariable.cpp  SymbolicVariable.h  SymbolicVariables.cpp  SymbolicVariables.h  VariableUsage.cpp  VariableUsage.h  Why3Translator.cpp  Why3Translator.h  Z3Interface.cpp  Z3Interface.h
libpolynomial/inlineasm/: AsmAnalysis.cpp  AsmAnalysis.h  AsmAnalysisInfo.cpp  AsmAnalysisInfo.h  AsmCodeGen.cpp  AsmCodeGen.h  AsmData.h  AsmDataForward.h  AsmParser.cpp  AsmParser.h  AsmPrinter.cpp  AsmPrinter.h  AsmScope.cpp  AsmScope.h  AsmScopeFiller.cpp  AsmScopeFiller.h  AsmStack.cpp  AsmStack.h
libpolynomial/interface/: ABI.cpp  ABI.h  AssemblyStack.cpp  AssemblyStack.h  CompilerStack.cpp  CompilerStack.h  ErrorReporter.cpp  ErrorReporter.h  Exceptions.cpp  Exceptions.h  GasEstimator.cpp  GasEstimator.h  InterfaceHandler.cpp  InterfaceHandler.h  Natspec.cpp  Natspec.h  OptimiserSettings.h  ReadFile.h  Utils.h  (+7 more)
libsvmasm/: Assembly.cpp  Assembly.h  AssemblyItem.cpp  AssemblyItem.h  BlockDeduplicator.cpp  BlockDeduplicator.h  CMakeLists.txt  CommonSubexpressionEliminator.cpp  CommonSubexpressionEliminator.h  ConstantOptimiser.cpp  ConstantOptimiser.h  ControlFlowGraph.cpp  ControlFlowGraph.h  Exceptions.h  ExpressionClasses.cpp  ExpressionClasses.h  GasMeter.cpp  GasMeter.h  Instruction.cpp  Instruction.h  JumpdestRemover.cpp  JumpdestRemover.h  KnownState.cpp  KnownState.h  LinkerObject.cpp  LinkerObject.h  PathGasMeter.cpp  PathGasMeter.h  PeepholeOptimiser.cpp  PeepholeOptimiser.h  RuleList.h  SVMSchedule.h  SemanticInformation.cpp  SemanticInformation.h  SimplificationRule.h  SimplificationRules.cpp  SimplificationRules.h  SourceLocation.h  Version.cpp  Version.h
lllc/: CMakeLists.txt  main.cpp
polc/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  jsonCompiler.cpp  jsonCompiler.h  main.cpp
test/: CMakeLists.txt  Common.cpp  Common.h  ExecutionFramework.cpp  ExecutionFramework.h  InteractiveTests.h  Metadata.cpp  Metadata.h  Options.cpp  Options.h  RPCSession.cpp  RPCSession.h  TestCase.cpp  TestCase.h  TestHelper.cpp  TestHelper.h  TestUtils.cpp  TestUtils.h  boostTest.cpp  buglistTests.js  cmdlineTests.sh  externalTests.sh  fuzzer.cpp  polcjsTests.sh
(+744 files in other folders)
