if (EMSCRIPTEN)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s EXPORTED_FUNCTIONS='[\"_compileJSON\",\"_license\",\"_version\",\"_compileJSONMulti\",\"_compileJSONCallback\",\"_compileStandard\"]' -s RESERVED_FUNCTION_POINTERS=20")
	add_executable(poljson libpolc.cpp)
	target_link_libraries(poljson PRIVATE polynomial)
else()
	add_library(libpolc libpolc.cpp)
	set_target_properties(libpolc PROPERTIES OUTPUT_NAME polc)
	target_link_libraries(libpolc PRIVATE polynomial)
endif()
